main/default/objects/Engagement_Activity__c/Engagement_Activity__c.object-meta.xml
<CustomObject>
    <label>Engagement Activity</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>Engagement Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>