main/default/objects/Engagement_Activity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR (2 AND 3)</booleanFilter>
        <filterItems>
            <field>$Source.Target_Audience__c</field>
            <operation>equals</operation>
            <valueField>Account.Customer_Segment__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Target_Audience__c</field>
            <operation>equals</operation>
            <value>All Customers</value>
        </filterItems>
        <filterItems>
            <field>Account.Customer_Segment__c</field>
            <operation>equals</operation>
            <value>New Customers, Existing Customers, VIP</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagement Activities</relationshipLabel>
    <relationshipName>Engagement_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>