main/default/objects/Engagement_Activity__c/fields/Engagement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Notes__c</fullName>
    <label>Engagement Notes</label>
    <type>TextArea</type>
</CustomField>