main/default/objects/Engagement_Activity__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promo Offers</fullName>
            </value>
            <value>
                <fullName>Personal Recommendations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>