main/default/objects/Engagement_Activity__c/fields/Loyalty_Program__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loyalty Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Loyalty_Program__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Loyalty_Program__c</referenceTo>
    <relationshipLabel>Engagement Activities</relationshipLabel>
    <relationshipName>Engagement_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>