main/default/objects/Engagement_Activity__c/fields/Promotion_Name__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Name__c</fullName>
    <label>Promotion Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>