main/default/objects/Engagement_Activity__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Customers</fullName>
            </value>
            <value>
                <fullName>Existing Customers</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>All Customers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>