main/default/objects/Engagement_Activity__c/validationRules/Engagement_notes_field_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Engagement_notes_field_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Engagement_Notes__c )</errorConditionFormula>
    <errorDisplayField>Engagement_Notes__c</errorDisplayField>
    <errorMessage>This Fields is Required</errorMessage>
</ValidationRule>