main/default/objects/Engagement_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Target_Audience__c</columns>
    <columns>Engagement_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>